Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             loop 
             poster="poster.jpg"
             id="bgVideo">
-            <source src="Dynamic_Brain_Scan_Video_Generation.mp4" type="video/mp4">
+            <source src="Brain.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <div class="overlay"></div>
@@ -315,4 +315,5 @@
         });
     </script>
 </body>
+
 </html>
