--- a/about.html
+++ b/about.html
@@ -10,13 +10,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
     <style>
-        /* --- CSS Reset & Variables --- */
+        /* Shared Styles matching Index */
         :root {
             --bg-color: #02090E; 
             --text-color: #f0f0f0;
-            --text-muted: #a0a0a0;
             --accent-color: #ffffff;
-            --overlay-color: rgba(2, 9, 14, 0.75); /* Slightly darker for readability */
+            --overlay-color: rgba(2, 9, 14, 0.75);
             --font-family: "Inter", sans-serif;
             --spacing-unit: 2rem;
         }
@@ -28,49 +27,41 @@
             color: var(--text-color);
             font-family: var(--font-family);
             line-height: 1.6;
-            -webkit-font-smoothing: antialiased;
+            width: 100%;
             overflow-x: hidden;
         }
 
-        /* --- Hero Section (Matches Index) --- */
+        /* Shorter Hero for About Page */
         .hero {
             position: relative;
-            height: 60vh; /* Shorter than home page to focus on content */
-            width: 100vw;
+            height: 60vh;
+            width: 100%;
             display: flex;
             align-items: center;
             justify-content: center;
             overflow: hidden;
             text-align: center;
+            background-color: var(--bg-color);
         }
 
         .video-background {
             position: absolute;
             top: 50%;
             left: 50%;
-            width: 100vw;
-            height: 100vh;
-            transform: translate(-50%, -50%);
+            min-width: 100%;
+            min-height: 100%;
+            width: auto;
+            height: auto;
             z-index: -2;
-            pointer-events: none;
-        }
-
-        .video-background iframe {
-            width: 100vw;
-            height: 56.25vw;
-            min-height: 100vh;
-            min-width: 177.77vh;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            transform: translateX(-50%) translateY(-50%);
+            object-fit: cover;
         }
 
         .logo {
             position: absolute;
             top: 1.5rem;
             left: 1.5rem;
-            width: 140px;
+            width: 180px;
             height: auto;
             z-index: 10;
         }
@@ -90,11 +81,9 @@
         h1 {
             font-size: clamp(2rem, 5vw, 3rem);
             font-weight: 700;
-            letter-spacing: -0.02em;
             margin-bottom: 1rem;
         }
 
-        /* --- Content Area --- */
         .content-wrapper {
             max-width: 800px;
             margin: 0 auto;
@@ -103,28 +92,23 @@
 
         .about-body {
             font-size: 1.1rem;
-            color: var(--text-color);
             margin-bottom: 3rem;
         }
-
-        .about-body p {
-            margin-bottom: 1.5rem;
-        }
+        .about-body p { margin-bottom: 1.5rem; }
 
         footer {
             text-align: center;
             padding: var(--spacing-unit);
-            font-size: 0.75rem;
+            font-size: 0.85rem;
             color: #555;
             border-top: 1px solid #111;
         }
 
-        /* --- Mobile Optimizations --- */
         @media (max-width: 600px) {
-            .logo { width: 110px; top: 1rem; left: 1rem; }
+            .logo { width: 120px; top: 1rem; left: 1rem; }
             .hero { height: 40vh; }
-            .hero-content nav a { margin: 0 8px !important; font-size: 0.8rem; }
-            .about-body { font-size: 1rem; }
+            .hero-content nav a { margin: 0 10px !important; font-size: 0.9rem; }
+            .video-background { height: 100vh; }
         }
     </style>
 </head>
@@ -133,13 +117,14 @@
     <header class="hero">
         <a href="index.html"><img src="logo.png" alt="Neso Technology Logo" class="logo"></a>
 
-        <div class="video-background">
-            <iframe 
-                src="https://www.youtube.com/embed/WJ6oafq7QfA?autoplay=1&mute=1&loop=1&playlist=WJ6oafq7QfA&controls=0&showinfo=0&rel=0&iv_load_policy=3&modestbranding=1&enablejsapi=1" 
-                frameborder="0" 
-                allow="autoplay; fullscreen">
-            </iframe>
-        </div>
+        <video 
+            class="video-background" 
+            playsinline 
+            autoplay 
+            muted 
+            loop>
+            <source src="Brain.mp4" type="video/mp4">
+        </video>
 
         <div class="overlay"></div>
         
@@ -151,14 +136,6 @@
             </nav>
         </div>
     </header>
-
-    <main class="content-wrapper">
-        <section class="about-body">
-            <p>Neso Technology Inc. is at the intersection of <strong>Sounds</strong>, <strong>Neuroscience</strong>, and <strong>Machine Learning</strong>.</p>
-            <p>We are dedicated to exploring how advanced neural scan technologies and computational models can unlock new understanding of the human brain's relationship with auditory stimuli.</p>
-            <p>Our mission is to pioneer next-generation interfaces and technologies that redefine our cognitive potential.</p>
-        </section>
-    </main>
 
     <footer>
         <small>&copy; Neso Technology Inc. All rights reserved.</small>
