--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             background-color: var(--bg-color); 
         }
 
-        /* Video Background Styling */
+        /* Video Background Styling - UPDATED Z-INDEX */
         .video-background {
             position: absolute;
             top: 50%;
@@ -55,33 +55,36 @@
             min-height: 100%;
             width: auto;
             height: auto;
-            z-index: -2;
+            z-index: 0; /* Changed from -2 to 0 */
             transform: translateX(-50%) translateY(-50%);
-            object-fit: cover; /* Ensures video covers screen without stretching */
+            object-fit: cover;
         }
 
-        /* Logo Styling */
+        /* Logo Styling - UPDATED Z-INDEX */
         .logo {
             position: absolute;
             top: 1.5rem;
             left: 1.5rem;
             width: 180px;
             height: auto;
-            z-index: 10;
+            z-index: 2; /* Ensure above video */
         }
 
+        /* Overlay Styling - UPDATED Z-INDEX */
         .overlay {
             position: absolute;
             top: 0; left: 0;
             width: 100%; height: 100%;
             background-color: var(--overlay-color);
-            z-index: -1;
+            z-index: 1; /* Changed from -1 to 1 */
         }
 
+        /* Content Styling - UPDATED Z-INDEX */
         .hero-content {
             padding: var(--spacing-unit);
             max-width: 800px;
-            z-index: 1;
+            z-index: 2; /* Ensure above overlay */
+            position: relative;
             animation: fadeIn 1.5s ease-out;
         }
 
@@ -91,6 +94,8 @@
             margin: 0 auto;
             padding: calc(var(--spacing-unit) * 3) var(--spacing-unit);
             text-align: center;
+            position: relative;
+            z-index: 2;
         }
 
         .about-text {
@@ -115,6 +120,7 @@
             color: white;
             border-radius: 4px;
             font-size: 1rem;
+            font-family: var(--font-family);
             outline: none;
             transition: border-color 0.3s;
         }
@@ -159,7 +165,6 @@
         @media (max-width: 600px) {
             .logo { width: 120px; top: 1rem; left: 1rem; }
             .hero-content nav a { margin: 0 10px !important; font-size: 0.9rem; }
-            /* Ensure video covers full height on mobile */
             .video-background { height: 100vh; }
         }
     </style>
@@ -215,9 +220,8 @@
             const video = document.getElementById('bgVideo');
             const formEndpoint = "https://formspree.io/f/xovgoljy"; 
 
-            // Force Video Play (Helps with some mobile browsers)
             if(video) {
-                video.muted = true; // Essential for autoplay
+                video.muted = true;
                 video.play().catch(e => console.log("Autoplay blocked/failed:", e));
             }
 
@@ -267,5 +271,3 @@
     </script>
 </body>
 </html>
-
-
