--- a/about.html
+++ b/about.html
@@ -189,8 +189,8 @@
     </nav>
 
     <header class="page-header">
-        <h1>Pioneering Neuroscience</h1>
-        <p class="lead-text">Neso Technology is pioneering novel neuroscience techniques.</p>
+        <h1>Neuroscience Research</h1>
+        <p class="lead-text">SOUND | NEUROSCIENCE | AI</p>
     </header>
 
     <main>
@@ -272,3 +272,4 @@
 
 </body>
 </html>
+
