--- a/about.html
+++ b/about.html
@@ -205,9 +205,9 @@
                     <h3 class="member-name">Dr Navid Banafshe</h3>
                     <p class="member-role">Founder, CEO, CSO</p>
                     <p class="member-bio">
-                        Navid is an auditory neuroscientist with 10 years’ experience in neuroscience. 
-                        He founded Neso Technology after completing his PhD from King’s College London in 2021 (Marie Curie PhD Fellowship).
-                        He has authored five publications featured in scientific journals.
+                        Navid is a neuroscientist with 10 years’ experience in the auditory neuroscience.
+                        He founded Neso Technology after completing his PhD at King’s College London where he was awarded the Marie Curie PhD Fellowship.
+                        Navid has authored five publications featured in scientific journals, globally.
                     </p>
                 </div>
 
@@ -216,8 +216,9 @@
                     <h3 class="member-name">Dr Dominic Burrows</h3>
                     <p class="member-role">Machine Learning</p>
                     <p class="member-bio">
-                        Dominic leads machine learning research at Neso Technology with over 10 years’ experience in AI and neuroscience.
-                        PhD in Computational Neuroscience from King’s College London. He is also an Honorary Research Fellow at UCL and co-lead lecturer on Data Science for Neuroscience.
+                        Dominic leads machine learning research at Neso Technology with over 10 years’ experience at the intersection of artificial intelligence and neuroscience research.
+                        He completed his PhD in Computational Neuroscience at King’s College London, where he now serves as co-lead lecturer on Data Science for Neuroscience.
+                        He is also an Honorary Research Fellow at UCL (University College London) and was previously a Data Science Lecturer at UC San Diego.
                     </p>
                 </div>
 
@@ -234,9 +235,9 @@
                     <h3 class="member-name">Dr. Marlies Pinnow</h3>
                     <p class="member-role">Scientific Advisor</p>
                     <p class="member-bio">
-                        Former Head of the Motivation Lab at Ruhr-University Bochum, Germany. 
-                        Her research focuses on Motivational Psychology, including the interaction between motivation, emotion, and volition. 
-                        Over 30 years’ experience in psychology and neuroscience.
+                        Dr. Pinnow was formerly Head of the Motivation Lab at the Ruhr-University Bochum, Germany.
+                        Her research interests include Motivational Psychology, including the interaction between motivation, emotion and volition.
+                        Dr. Pinnow has over 30 years’ experience in psychology and neuroscience.                        
                     </p>
                 </div>
 
@@ -245,9 +246,9 @@
                     <h3 class="member-name">Prof. Dr. Jörg Lewald</h3>
                     <p class="member-role">Scientific Advisor</p>
                     <p class="member-bio">
-                        Head of the Auditory Cognitive Neuroscience Lab at Ruhr-University Bochum since 1996. 
-                        Expert in auditory stimulation, sound localization, and multisensory integration. 
-                        Authored over 30 publications in cognitive neuroscience over the last 40 years.
+                        Prof. Jörg Lewald has been the Head of the Auditory Cognitive Neuroscience Lab at the Ruhr-University Bochum since 1996.
+                        He is an expert in using auditory stimulation to assess neural mechanisms of sound processing including sound localization, multisensory integration and space perception.
+                        He has authored over 30 publications on cognitive neuroscience and adjacent fields over the last 40 years.
                     </p>
                 </div>
 
@@ -262,3 +263,4 @@
 
 </body>
 </html>
+
