--- a/about.html
+++ b/about.html
@@ -189,8 +189,8 @@
     </nav>
 
     <header class="page-header">
-        <h1>Pioneering Neuroscience</h1>
-        <p class="lead-text">Neso Technology is pioneering novel neuroscience techniques.</p>
+        <h1>Sound | Neuroscience | AI</h1>
+        <p class="lead-text"></p>
     </header>
 
     <main>
@@ -263,4 +263,5 @@
 
 </body>
 </html>
+
 
