--- a/about.html
+++ b/about.html
@@ -189,8 +189,8 @@
     </nav>
 
     <header class="page-header">
-        <h1>Sound | Neuroscience | AI</h1>
-        <p class="lead-text"></p>
+        <h1>About Us</h1>
+        <p class="lead-text">Sound | Neuroscience | AI</p>
     </header>
 
     <main>
@@ -263,5 +263,6 @@
 
 </body>
 </html>
+
 
 
