--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
             <nav style="margin-top: 20px;">
                 <a href="index.html" style="color: white; margin: 0 15px; text-decoration: none; font-weight: 600;">HOME</a>
                 <a href="about.html" style="color: white; margin: 0 15px; text-decoration: none; font-weight: 600;">ABOUT</a>
+                <a href="index-trails.html" style="color: white; margin: 0 15px; text-decoration: none; font-weight: 600;">OUR TRIALS</a>
             </nav>
         </div>
     </header>
