--- a/index-trials.html
+++ b/index-trials.html
@@ -257,7 +257,7 @@
     </div>
 
     <div class="intro-text">
-        <p>If you want to participate in non-invasive trials for methods to advance research into neurological conditions, sign up to our patient registry and we will be in touch if you're eligible for paid participation in our trials.</p>
+        <p>If you want to participate in non-invasive trials for methods to advance research into neurological conditions, sign up to our patient registry. We will contact you if you're eligible for paid participation in our trials.</p>
         <p>If you have any questions email <a href="mailto:info@nesotechnology.com">info@nesotechnology.com</a></p>
     </div>
 
