Adjust z-index for hero section elements
Updated z-index values for video background, logo, overlay, and content to ensure proper layering.

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
     <main class="content-wrapper">
         <section class="about-section">
-            <p class="about-text">SOUND | NEUROSCIENCE | MACHINE LEARNING</p>
+            <p class="about-text">SOUND | NEUROSCIENCE | AI</p>
         </section>
 
         <section class="signup-section">
@@ -272,4 +272,5 @@
     </script>
 </body>
 </html>
+
 
