Update print statement from 'Hello' to 'Goodbye'

--- a/index-trials.html
+++ b/index-trials.html
@@ -69,8 +69,7 @@
             height: auto;
             display: block;
             margin: 0 auto;
-            /* Inverts white logo to black for the white background */
-            filter: invert(1); 
+            /* filter: invert(1);  <-- REMOVED: Logo remains in original colors */
             transition: opacity 0.3s;
         }
 
