Update navigation bar to include 'OUR TRIALS' link
Added a new link to 'OUR TRIALS' in the navigation bar.

--- a/about.html
+++ b/about.html
@@ -185,6 +185,7 @@
         <div class="nav-links">
             <a href="index.html">HOME</a>
             <a href="about.html" style="color: white; border-bottom: 1px solid white;">ABOUT</a>
+            <a href="index-trials.html">OUR TRIALS</a>
         </div>
     </nav>
 
@@ -263,6 +264,7 @@
 
 </body>
 </html>
+
 
 
 
