--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+## on 05 January I removed the about page as we await approval from the scientists to be included on the website between row 215-294, highlight those lines and use CTRL + / to uncomment them ##
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -212,7 +213,7 @@
                     </p>
                 </div>
 
-                <div class="team-card">
+                <!-- <div class="team-card">
                     <img src="team_dominic.jpg" alt="Dr Dominic Burrows" class="member-img">
                     <h3 class="member-name">Dr Dominic Burrows</h3>
                     <p class="member-role">Machine Learning</p>
@@ -254,7 +255,7 @@
                 </div>
 
             </div>
-        </div>
+        </div> -->
 
     </main>
 
@@ -264,7 +265,3 @@
 
 </body>
 </html>
-
-
-
-
