Restore about page content and structure
Restored the about page content and structure while awaiting approval from scientists.

--- a/about.html
+++ b/about.html
@@ -190,10 +190,10 @@
         </div>
     </nav>
 
-    <header class="page-header">
+    <-- <header class="page-header">
         <h1>About Us</h1>
         <p class="lead-text">Sound | Neuroscience | AI</p>
-    </header>
+    </header> -->
 
     <main>
         
@@ -265,3 +265,4 @@
 
 </body>
 </html>
+
