Restore about.html page with team and advisor sections

--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-## on 05 January I removed the about page as we await approval from the scientists to be included on the website between row 215-294, highlight those lines and use CTRL + / to uncomment them ##
+<!-- ## on 05 January I removed the about page as we await approval from the scientists to be included on the website between row 215-294, highlight those lines and use CTRL + / to uncomment them ## -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -190,10 +190,10 @@
         </div>
     </nav>
 
-    <-- <header class="page-header">
+    <header class="page-header">
         <h1>About Us</h1>
         <p class="lead-text">Sound | Neuroscience | AI</p>
-    </header> -->
+    </header>
 
     <main>
         
@@ -265,4 +265,5 @@
 
 </body>
 </html>
+
 
