Update print statement from 'Hello' to 'Goodbye'

--- a/index-trials.html
+++ b/index-trials.html
@@ -1,3 +1,4 @@
+/* # on 13 Jan 2025 I hide this page by commenting all the code#
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -603,5 +604,4 @@
 
 </body>
 </html>
-
-
+ */
