Update fmt.Println message to Goodbye World

--- a/index-trials.html
+++ b/index-trials.html
@@ -1,4 +1,4 @@
-/* # on 13 Jan 2025 I hide this page by commenting all the code#
+<!-- ## on 05 January I removed the about page as we await approval from the scientists to be included on the website between row 215-294, highlight those lines and use CTRL + / to uncomment them ## -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -605,3 +605,4 @@
 </body>
 </html>
  */
+--!>
